@startuml

title __TIKTOK's Class Diagram__\n

  namespace com.example.tiktok {
    interface com.example.tiktok.ApiService {
        {abstract} + getVideos()
    }
  }
  

  namespace com.example.tiktok {
    class com.example.tiktok.MainActivity {
        ~ vp : ViewPager2
        # onCreate()
        - getData()
    }
  }
  

  namespace com.example.tiktok {
    class com.example.tiktok.MyAdapter {
        ~ mContext : Context
        - dataSet : List<VideoItem>
        + getItemCount()
        + onBindViewHolder()
        + onCreateViewHolder()
        + setDataSet()
        ~ MyAdapter()
    }
  }
  

  namespace com.example.tiktok {
    class com.example.tiktok.MyAdapter.MyViewHolder {
        ~ avatar : ImageView
        ~ cover : ImageView
        ~ desc : TextView
        ~ like : TextView
        ~ nickname : TextView
        ~ video : VideoView
        ~ MyViewHolder()
    }
  }
  

  namespace com.example.tiktok {
    class com.example.tiktok.MyAppGlideModule {
    }
  }
  

  namespace com.example.tiktok {
    class com.example.tiktok.VideoItem {
        + avatarUrl : String
        + description : String
        + id : String
        + likes : int
        + name : String
        + videoUrl : String
        + toString()
    }
  }
  

  com.example.tiktok.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.tiktok.MainActivity o-- com.example.tiktok.MyAdapter : mAdapter
  com.example.tiktok.MyAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.tiktok.MyAdapter +-down- com.example.tiktok.MyAdapter.MyViewHolder
  com.example.tiktok.MyAdapter.MyViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.tiktok.MyAppGlideModule -up-|> com.bumptech.glide.module.AppGlideModule


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
